# rust-unix-cmd

./: Cargo.toml  README.md
cat/: Cargo.toml
cat/src/: cli.rs  main.rs
cat/tests/: cli.rs
cat/tests/inputs/: multiline.txt
cut/: Cargo.toml
cut/src/: cli.rs  extract.rs  file.rs  main.rs  parser.rs
cut/tests/: cli.rs  util.rs
cut/tests/expected/: movies.csv.b1-2.out  movies.csv.c8.out  movies.csv.f1-2.out
cut/tests/inputs/: movies.csv
echo/: Cargo.toml
echo/src/: cli.rs  main.rs
echo/tests/: cli.rs
find/: Cargo.toml
find/src/: cli.rs  entry.rs  main.rs
find/tests/: cli.rs  util.rs
find/tests/expected/: dir.txt  file.txt  find.txt  link.txt
grep/: Cargo.toml
grep/src/: cli.rs  file.rs  main.rs
grep/tests/: cli.rs  util.rs
grep/tests/expected/: sample.count  sample.recursive
grep/tests/inputs/: sample2.txt
head/: Cargo.toml
head/src/: cli.rs  main.rs  parser.rs
head/tests/: cli.rs  util.rs
head/tests/inputs/: multiline.txt
uniq/: Cargo.toml
uniq/src/: cli.rs  main.rs
uniq/tests/: cli.rs
uniq/tests/expected/: duplicate.txt.c.out
wc/: Cargo.toml
wc/src/: cli.rs  file.rs  format.rs  main.rs
wc/tests/: cli.rs
