[workspace]
members = ["cat", "cut", "echo", "find", "grep", "head", "uniq", "wc"]

[workspace.package]
name = "rust-unix-cmd"
version = "0.1.0"
edition = "2021"
description = "Sample UNIX command line tools in Rust"

[workspace.dependencies]
anyhow = "1.0.95"
assert_cmd = "2.0.16"
clap = { version = "4.5.23", features = ["derive"] }
predicates = "3.1.3"
rand = "0.8.5"
tempfile = "3.15.0"
