[package]
name = "cat"
version.workspace = true
edition.workspace = true
description = "A simple `cat` command implementation"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rand = { workspace = true }
