[package]
name = "cut"
version.workspace = true
edition.workspace = true
description = "A simple `cut` command implementation"

[dependencies]
anyhow = { workspace = true}
clap = { workspace = true }
csv = "1.3.1"
regex = "1.11.1"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
