[package]
name = "head"
version.workspace = true
edition.workspace = true
description = "A simple `head` command implementation"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rand = { workspace = true }
