[package]
name = "uniq"
version.workspace = true
edition.workspace = true
description = "A simple `uniq` command implementation"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rand = { workspace = true }
tempfile = "3.15.0"
